// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    124
  </h3>
</div>
`;

exports[`should render ExpenseSummary correctly with 1 expense 2`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totalling 
    25245
  </h3>
</div>
`;
